feat: implement scene rendering

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="stylesheet" href="https://benedikt-bitterli.me/tantalum/ui.css">
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -19,22 +21,57 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <title>React App</title>
+</head>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<body>
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div id="root"></div>
+  <div class="tantalum-render" id="content">
+    <canvas id="render-canvas" width="820" height="461"></canvas>
+    <div id="render-overlay" class="render-loading">Loading...</div>
+  </div>
+  <div class="tantalum-controls" id="controls" style="visibility: hidden">
+    <div id="render-progress"></div>
+    <p class="progress-label" id="render-progress-label"></p>
+    <div class="control-row clearfix">
+      <div class="col-12-12 col-left col-padding">
+        <h3 class="control-title">Resolution</h3>
+        <div id="resolution-selector"></div>
+      </div>
+    </div>
+    <div class="control-row clearfix">
+      <div class="col-3-12 col-left col-padding">
+        <h3 class="control-title">Scene</h3>
+        <div id="scene-selector"></div>
+      </div>
+      <div class="col-6-12 col-left col-padding">
+        <h3 class="control-title">Emission Spectrum</h3>
+        <div class="center-tight">
+          <div id="emission-selector"></div>
+          <canvas id="spectrum-canvas" style="border: none;" width="425" height="256"></canvas>
+          <div id="emission-temperature"></div>
+          <div id="gas-selection"></div>
+        </div>
+      </div>
+      <div class="col-2-12 col-left">
+        <h3 class="control-title">Spread</h3>
+        <div id="spread-selector"></div>
+      </div>
+    </div>
+    <div class="control-row clearfix">
+      <div class="col-3-12 col-left col-padding">
+        <h3 class="control-title">Light Path Length</h3>
+        <div id="path-length"></div>
+      </div>
+      <div class="col-8-12 col-left col-padding">
+        <h3 class="control-title">Sample Count</h3>
+        <div id="sample-count"></div>
+      </div>
+    </div>
+  </div>
+</body>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
 </html>
