feat: add rect stroke to lens

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
-  <div class="tantalum-controls" id="controls" style="visibility: hidden">
+  <div class="tantalum-controls" id="controls" style="visibility: hidden; display: none;">
     <div class="control-row clearfix">
       <div class="col-12-12 col-left col-padding">
         <h3 class="control-title">Resolution</h3>
